--- a/main.tex
+++ b/main.tex
@@ -400,27 +400,57 @@ used only \verb|mbp19| and \verb|leonardo|. Thus in the end we obtained a datase
 
 As we can see in \ref{fig:ant_cont_corr_mat}, the average and peak memory usage has the highest correlation with the Carbon Emissions of the algorithms. In particular
 memAvg has a positive correlation of $0.87$, and memPeak of $0.69$. As we could expect, these two metrics are highly correlated with one another, with a score of $.80$.
-Then, totEnergy has a correlation of $1$ with CO2e, meaning they are perfectly proportional to each other. This reflects the fact that Carbon Emissions, as measured
+Then, \verb|totEnergy| has a correlation of $1$ with CO2e, meaning they are perfectly proportional to each other. This reflects the fact that Carbon Emissions, as measured
 by CodeCarbon, depends by two factors, i.e. the energy consumed by running the algorithm and the Carbon Intensity. Since we executed all the experiments in the same
 country, the Carbon Intensity over the whole dataset is fixed, meaning that the only factor influencing the CO2e emissions is the energy consumed, while the Carbon Intensity
-is just a scaling factor. Lastly, we can also point out that the factor which has the most impact on the solution cost (and thus the quality), is the average memory,
-having a negative correlation of $-0.47$.
+is just a scaling factor. Indeed, \verb|totEnergy| and \verb|CO2e| both the same correlation values with the other variables. Then, as one may point out, we could just remove
+the energy consumption values from the dataset, and just keep the emissions. However, the energy consumption values can be scaled by different Carbon Intensity values, giving
+the possibility of evaluating the impact of changing the location of the computations, as we will see later on.
+Lastly, regarding the solution cost (which is inversely proportional to the solution quality), we can point out that the factor which has the most impact on it is the average memory,
+having a negative correlation of $-0.47$. Between the solution cost and the emissions, the correlation is a bit weaker, being $-0.36$. We could then perform some tests with HADA
+to asses the impact of constraints on memory and solution quality on the carbon emissions and viceversa. 
 
 Here we can see some results given by the HADA framework tested on the updated dataset for ANTICIPATE and CONTINGENCY. We test some combination of constraints 
-on Runtime, Solution cost, and average Memory consumption (in MB), with the objective of minimizing the CO2e emissions (in kg).
+on Solution cost (which is expressed in thousands of euros), and Average Memory consumption (expressed in MB), with the objective of minimizing the CO2e emissions (in kg).
 
 \begin{table}[h!]
     \centering
-    \begin{tabular}{ccc|ccc}
-        \toprule
-        \textbf{Time bound (sec)} & \textbf{Cost (keuro)} & \textbf{memAvg (MB)} & \textbf{nScenarios} & \textbf{Hardware} & \textbf{CO2e(kg)} \\
-        \midrule
-        $42$ & no & no & 1 & mbp19 & $7.23 \times 10^{-6}$ \\
-        \bottomrule
+    \begin{tabular}{cc|ccccc}
+        \hline
+        \multicolumn{2}{c|}{Bounds} & \multicolumn{5}{c}{Solution} \\
+        \hline
+        mem & sol & $n^P$ & HW & CO2e & mem & cost \\
+        \hline
+        no & no & 1 & mbp19 & $7.23 \times 10^{-6}$ & boh & boh \\
+        \hline
     \end{tabular}
-    \caption{Experimental results for the anticipate algorithm with bounds on the runtime}
+    \caption{Experimental results for the ANTICIPATE algorithm with bounds on the runtime}
     \label{tab:anticipate_results}
 \end{table}
+
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{cc|ccccc}
+        \hline
+        \multicolumn{2}{c|}{Bounds} & \multicolumn{5}{c}{Solution} \\
+        \hline
+        mem & sol & $n^P$ & HW & CO2e & mem & cost \\
+        \hline
+        no & no & 1 & mbp19 & $7.23 \times 10^{-6}$ & boh & boh \\
+        \hline
+    \end{tabular}
+    \caption{Experimental results for the CONTINGENCY algorithm with bounds on the runtime}
+    \label{tab:contingency_results}
+\end{table}
+
+Next, we take a look at the correlation values for the Min-cut/Max-flow algorithms
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.8\textwidth]{imgs/max_flow_corr_mat.png}
+    \caption{Correlation matrix for Min-Cut/Max-Flow Algorithms BK, EIBFS and HPF}
+    \label{fig:max_flow_corr_mat}
+\end{figure}
 
 \chapter{HADA-as-a-Service}
 
