--- a/main.tex
+++ b/main.tex
@@ -398,6 +398,8 @@ used only \verb|mbp19| and \verb|leonardo|. Thus in the end we obtained a datase
     \label{fig:ant_cont_corr_mat}
 \end{figure}
 
+% TODO: Remove the outliers to better check the distribution of Emissions and Energy Consumptions
+
 % TODO: explore the relationship between other metrics, e.g. check the correlations of cpu energy and ram energy with other variables (even if it should be almost the same as the totEnergy)
 
 As we can see in \ref{fig:ant_cont_corr_mat}, the average and peak memory usage has the highest correlation with the Carbon Emissions of the algorithms. In particular
