refined up to 3.3

--- a/biblio.bib
+++ b/biblio.bib
@@ -359,3 +359,30 @@ publisher = {Institute of Electrical and Electronics Engineers Inc.}
   pages={2310-2329},
   keywords={Computer vision;Parallel algorithms;Benchmark testing;Image segmentation;Sun;Partitioning algorithms;Heuristic algorithms;Algorithms;computer vision;graph algorithms;graph-theoretic methods;parallel algorithms;performance evaluation of algorithms and systems},
   doi={10.1109/TPAMI.2022.3170096}}
+
+  @article{brown2020language,
+  title={Language Models are Few-Shot Learners},
+  author={Brown, Tom B and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared D and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and others},
+  journal={arXiv preprint arXiv:2005.14165},
+  year={2020}
+}
+
+@misc{husom2024priceprompting,
+      title={The Price of Prompting: Profiling Energy Use in Large Language Models Inference}, 
+      author={Erik Johannes Husom and Arda Goknil and Lwin Khin Shar and Sagar Sen},
+      year={2024},
+      eprint={2407.16893},
+      archivePrefix={arXiv},
+      primaryClass={cs.CY},
+      url={https://arxiv.org/abs/2407.16893}, 
+}
+
+@misc{samsi2023wordswattsbenchmarkingenergy,
+      title={From Words to Watts: Benchmarking the Energy Costs of Large Language Model Inference}, 
+      author={Siddharth Samsi and Dan Zhao and Joseph McDonald and Baolin Li and Adam Michaleas and Michael Jones and William Bergeron and Jeremy Kepner and Devesh Tiwari and Vijay Gadepally},
+      year={2023},
+      eprint={2310.03003},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2310.03003}, 
+}
